@@ -1,7 +1,9 @@
 Revision history for Music-Cadence
 
 {{$NEXT}}
-    - Improve documentation again.
+    - Enable imperfect inverted cadences.
+    - Improve documentation again!
+    - Enhance test cases.
 
 0.0801 2019-08-29 15:37:55
     - Improve documentation ever so slightly.
